# AG-X

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  build.sh  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt  test_quick.py
agx/: __init__.py  auth.py  config.py  database.py  landing_page.py  main.py  web_app.py
agx/advanced/: __init__.py  education.py  evolutionary.py  multi_agent.py  nlp_control.py  symbolic.py
agx/ai/: __init__.py  anomaly.py  explainer.py  explorer.py  optimizer.py
agx/chemistry/: __init__.py  equation_balancer.py  kinetics.py  molecular.py  thermodynamics.py
agx/dsa/: __init__.py  executor.py  problem_bank.py  visualizer.py
agx/english/: __init__.py  conversation.py  vocabulary.py
agx/experiments/: __init__.py  comparison.py  manager.py  reports.py
agx/mathematics/: __init__.py  calculus.py  graphing.py  symbolic.py
agx/physics/: __init__.py  constants.py  engine.py  general_relativity.py  newtonian.py  quantum_field.py  solver.py  speculative.py
agx/programming/: __init__.py
agx/viz/: __init__.py  dashboard.py  renderer.py  temporal.py
agx_2026.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: default.yaml
examples/: ai_optimization.py  basic_simulation.py  comprehensive_demo.py
tests/: test_physics.py
